# ntol

./: README.md
C/: README.md
Haskell/tictactoe/: hie.yaml  tictactoe.cabal
Haskell/tictactoe/Lib/: Lib.hs
Haskell/tictactoe/app/: Main.hs
Haskell/tictactoe/libraries/: TicTacToe.hs
Haskell/tictactoe/src/: Lib.hs
Ocaml/restapi/: dune-project
Ocaml/restapi/_build/: .db  .digest-db  log
Ocaml/restapi/_build/default/: restapi.dune-package  restapi.install
Ocaml/restapi/_build/default/.dune/: configurator  configurator.v2
Ocaml/restapi/_build/default/.ppx/3d14b1496086417f918587bfe8b79421/: dune__exe___ppx.cmo  dune__exe___ppx.cmx
Ocaml/restapi/_build/default/.ppx/a4ea0d83c521725fd7b0167e93f2550b/: dune__exe___ppx.cmi  dune__exe___ppx.cmo
Ocaml/restapi/_build/default/.ppx/bcab0be011c28261c514e69f4fe141f8/: dune__exe___ppx.cmo
Ocaml/restapi/_build/default/lib/: restapi.cma  restapi.cmxa  restapi.cmxs  restapi.ml  restapi.pp.ml
Ocaml/restapi/_build/default/lib/.merlin-conf/: lib-restapi
Ocaml/restapi/_build/default/lib/.restapi.objs/byte/: restapi.cmi  restapi.cmo  restapi.cmt
Ocaml/restapi/_build/default/lib/.restapi.objs/native/: restapi.cmx
Ocaml/restapi/_build/default/test/.merlin-conf/: exe-test_restapi
Ocaml/restapi/_build/default/test/.test_restapi.eobjs/byte/: dune__exe__Test_restapi.cmi  dune__exe__Test_restapi.cmti
Ocaml/restapi/_build/default/test/.test_restapi.eobjs/native/: dune__exe__Test_restapi.cmx
Ocaml/restapi/_build/install/default/lib/restapi/: META  dune-package  opam
Ocaml/restapi/lib/: dune  restapi.ml
(+23 files in other folders)
