cabal-version:      2.4
name:               tictactoe
version:            0.1.0.0

-- The license under which the package is released.
-- license:
author:             JoaoAlexNunes
maintainer:         jalnunes.2002@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules:   TicTacToe
  hs-source-dirs:    libraries
  build-depends:     base ^>=4.17.2.0
  default-language:  Haskell2010

executable tictactoe
  main-is:           Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:     base ^>=4.17.2.0, tictactoe
  hs-source-dirs:    app
  default-language:  Haskell2010

